# today_todolist

./: README.md  SETUP_TAURI.md  next.config.js  package-lock.json  package.json  tauri-init.js
src-tauri/: .gitignore  Cargo.toml  convert-icon.js  tauri.conf.json
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
src/components/: Header.tsx  TodoForm.tsx  TodoList.tsx
